# deepagent-document-generation

./: .env.example  .gitignore  README.md  deepagents-architecture-analysis.md  pyproject.toml
Bedrock/: GoldenBRD.docx  system_prompt.txt
Bedrock/Drool/: sample_drool.drl
Bedrock/Outbound/: LC0070_oauth2_spec.md
example_data/: golden_brd.md
example_data/corpus/: LC0070_oauth2_spec.md  api_endpoints.jsonl  api_spec.md  features.md  model_schema.jsonl  requirements.jsonl  sample_drool.drl  sample_workbook_mappings.jsonl  sample_workbook_transactions.jsonl
scripts/: md_to_docx.py
src/: config.py  execution_logging.py  guardrails.py  llm.py  logger.py  main.py  models.py  orchestrator.py
src/agents/: agent_definitions.py
src/prompts/: prompt_library.py
src/tools/: agent_output.py  base.py  code_executor.py  corpus_reader.py  docx_writer.py  drool_filter.py  file_reader.py  keyword_extractor.py  llm_client.py  regex_tool.py  token_estimator.py
tests/: conftest.py  test_agents.py  test_drool_filter.py  test_models.py  test_orchestrator.py  test_tools.py
