[project]
name = "deepagent-document-generation"
version = "0.2.0"
description = "Multi-agent async pipeline for BRD generation using deepagents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.1.5",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.0.0",
    "polars>=1.0.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.5.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
